follow and follow other users module completed and tested
