# server/controllers/user.controller.js
@@ -33,18 +33,24 @@ const create = async (req, res) => {
 }
 
 const userByID = async (req, res, next, id) => {
+    console.log("entered here")
     try {
-        let user = await User.findById(id);
+        let user = await User.findById(id)
+            .populate('following', '_id name')
+            .populate('followers', '_id name')
+            .exec();
+
         if (!user) {
-            return res.status('400').json({
+            return res.status(400).json({
                 error: 'User not found'
             })
         }
+
         req.profile = user;
         next();
     } catch (err) {
-        return res.status('400').json({
-            error: "Could not retrieve user"
+        return res.status(400).json({
+            error: "Could not retrieve user - you don't need this error"
         })
     }
 }
@@ -109,12 +115,106 @@ const photo = (req, res, next) => {
         res.set("Content-Type", req.profile.photo.contentType)
         return res.send(req.profile.photo.data)
     }
-    next()
+    next();
 }
 
 const defaultPhoto = (req, res) => {
     return res.sendFile(profileImage);
 }
 
-export default { list, create, read, update, remove, userByID, 
-    photo, defaultPhoto}
+const addFollowing = async (req, res, next) => {
+    try {
+        await User.findByIdAndUpdate(req.body.actualUserId, {
+            $push: {
+                following: req.body.followId
+            }
+        })
+        next();
+    } catch (err) {
+        return res.status(400).json({
+            error: errorHandler.getErrorMessage(err)
+        })
+    }
+}
+
+const addFollower = async (req, res) => {
+    try {
+        let result = await User.findByIdAndUpdate(req.body.followId, {
+            $push: {
+                followers: req.body.actualUserId
+            }
+        }, { new: true })
+            .populate('following', '_id name')
+            .populate('followers', '_id name')
+            .exec();
+
+        result.hashed_password = undefined
+        result.salt = undefined
+        res.json(result)
+    } catch (err) {
+        return res.status(400).json({
+            error: errorHandler.getErrorMessage(err)
+        })
+    }
+}
+
+const removeFollowing = async (req, res, next) => {
+    try {
+        await User.findByIdAndUpdate(req.body.actualUserId, {
+            $pull: {
+                following: req.body.unfollowId
+            }
+        })
+        next()
+    } catch (err) {
+        return res.status(400).json({
+            error: errorHandler.getErrorMessage(err)
+        })
+    }
+}
+
+const removeFollower = async (req, res) => {
+    try {
+        let result = await User.findByIdAndUpdate(req.body.unfollowId, {
+            $pull: {
+                followers: req.body.actualUserId
+            }
+        }, { new: true })
+            .populate('following', '_id name')
+            .populate('followers', '_id name')
+            .exec()
+
+        result.hashed_password = undefined;
+        result.salt = undefined;
+        res.json(result)
+    } catch (err) {
+        return res.status(400).json({
+            error: errorHandler.getErrorMessage(err)
+        })
+    }
+} 
+
+const findPeople = async (req, res) => {
+    let following = req.profile.following;
+    following.push(req.profile._id)
+
+    try {
+        let users = await User.find({
+            _id: {
+                $nin: following
+            }
+        }).select('name')
+
+        res.json(users)
+    } catch (err) {
+        return res.status(400).json({
+            error: errorHandler.getErrorMessage(err)
+        })
+    }
+}
+
+export default {
+    list, create, read, update, remove, userByID,
+    photo, defaultPhoto, addFollowing, addFollower,
+    removeFollowing, removeFollower, findPeople
+}
